Fix Text Visibility

--- a/SCSS/Modern Dark Theme.scss
+++ b/SCSS/Modern Dark Theme.scss
@@ -2232,6 +2232,9 @@
 							}
 						}
 						#AutomaticSearchPortals {
+							.text-base {
+								color: var(--darkmode-text);
+							}
 							.button {
 								background-color: var(--darkmode-background-selected-darker);
 								border-color: #000 !important;
